Fixed overlapping padding on main page.
The padding from the .note elements were overlapping on mobile and other mobile/narrow viewports, because inline elements apparently don't take their own padding into account during layout. Gave them an equivalent amount of line-height to fix.

--- a/ilsummer.css
+++ b/ilsummer.css
@@ -259,6 +259,7 @@ iframe {
 .note > span,
 .nav-link{
 	padding: 0.5em;
+	line-height: 41px; /* prevents overlapping padding */
 }
 
 .color-box {
